--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,21 +6,25 @@ $navbar-height: 40px !default;
 $navbar-height-mobile: 40px !default;
 
 @import "materialize";
-html, .ember-application, body > .ember-view, .content {
+html, .ember-application, body > .ember-view {
+  height: calc(100% - 12px);
+}
+.content, .sidebar-list {
   height: 100%;
 }
 input[type=text]:focus:not([readonly]) {
   border-bottom: initial;
   box-shadow: initial;
 }
-.row {
+body > .ember-view > .row {
   padding-top: $navbar-height;
 }
 * {
   -webkit-font-smoothing: antialiased;
 }
+
 .button-collapse {
-  position: absolute;
+  position: fixed;
   z-index:9999;
   top: 8px;
   right: 10px;
@@ -47,19 +51,14 @@ input[type=text]:focus:not([readonly]) {
 .sidebar {
   z-index:100;
 }
-.page {
-
-}
-
-.resize {
-  resize: horizontal;
-
-  .horizontal {
-  }
-  &.vertical {
-    resize: vertical;
+.card {
+  overflow: scroll;
+  position: relative;
+  .fixed-action-btn {
+    position: absolute;
   }
 }
+
 .collection-item {
   position: relative;
   i {
@@ -71,7 +70,16 @@ input[type=text]:focus:not([readonly]) {
   }
   input {
     border-bottom: initial;
-    height: initial;
-    margin: initial;
   }
+}
+.modal {
+  height: 80%;
+  width: 80%;
+  & .modal-footer {
+    position: absolute;
+    bottom: 0;
+  }
+}
+.half {
+  width: 30% !important;
 }
