--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -129,6 +129,12 @@ body > .ember-view > .row {
   }
 }
 .scenario {
+  position: relative;
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+  }
   .input-field label {
     top: 1.2rem;
   }
