--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -140,9 +140,16 @@ input {
 .scenario {
   position: relative;
   .close-button {
+    width: 5px;
+    height: 5px;
+    opacity: 0.2;
+    transition: opacity 0.2s ease;
+    &:hover {
+      opacity: 0.6;
+    }
     position: absolute;
     top: 5px;
-    right: 5px;
+    right: 20px;
   }
   .input-field label {
     top: 1.2rem;
@@ -203,7 +210,7 @@ input {
   height: 3.2rem;
 }
 .delete {
-  z-index: 999;
+  z-index: 998;
   line-height: initial !important;
   transition: opacity 0.2s ease;
   cursor: pointer;
@@ -218,7 +225,7 @@ input {
   transform: translateY(-50%);
 }
 .view_list {
-  z-index:999;
+  z-index:998;
   line-height: initial !important;
   transition: opacity 0.2s ease;
   cursor: pointer;
