materialize bump, tray, menu, css changes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -252,7 +252,7 @@ input {
     border-bottom: initial;
     box-shadow: initial;
   }
-  .close {
+  .close-item {
     cursor: pointer;
     transition: opacity 0.2s ease;
     opacity : 0.2;
